--- a/index.html
+++ b/index.html
@@ -2,13 +2,97 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern Children Academy</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header -->
+  <header class="header">
+    <div class="logo">Modern Children Academy</div>
+    <nav class="nav">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#admission">Admission</a>
+      <a href="#classes">Classes</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <h1>Welcome to Modern Children Academy</h1>
-  <p>An English Medium School (Nursery to Class 10)</p>
+  <!-- Hero -->
+  <section id="home" class="hero">
+    <div class="hero-content">
+      <h1>Welcome to Modern Children Academy</h1>
+      <p>English Medium School | Nursery to Class 10 | Sinhorwa, Varanasi</p>
+      <a class="btn" href="#admission">Apply Now</a>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="section about">
+    <h2>About Us</h2>
+    <p>
+      Modern Children Academy is a modern English medium school in Sinhorwa, Varanasi. We provide quality education from Nursery to Class 10.
+      Our focus is on overall development, strong basics, and a bright future for every child.
+    </p>
+  </section>
+
+  <!-- Admission -->
+  <section id="admission" class="section admission">
+    <h2>Admission</h2>
+    <div class="card">
+      <h3>Admission Open</h3>
+      <p>We welcome students from Nursery to Class 10.</p>
+      <ul>
+        <li>Strong basics in all subjects</li>
+        <li>English medium teaching</li>
+        <li>Smart and friendly environment</li>
+      </ul>
+      <a class="btn" href="#contact">Contact Now</a>
+    </div>
+  </section>
+
+  <!-- Classes -->
+  <section id="classes" class="section classes">
+    <h2>Classes</h2>
+    <div class="class-grid">
+      <div class="class-card">
+        <h3>Nursery</h3>
+        <p>Early learning for young minds.</p>
+      </div>
+      <div class="class-card">
+        <h3>KG</h3>
+        <p>Fun learning with basics.</p>
+      </div>
+      <div class="class-card">
+        <h3>Class 1-5</h3>
+        <p>Strong basics & foundation.</p>
+      </div>
+      <div class="class-card">
+        <h3>Class 6-8</h3>
+        <p>Advanced learning & skills.</p>
+      </div>
+      <div class="class-card">
+        <h3>Class 9-10</h3>
+        <p>Exam focused & strong support.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section contact">
+    <h2>Contact Us</h2>
+    <div class="contact-card">
+      <p><strong>Address:</strong> Sinhorwa, Varanasi</p>
+      <p><strong>Phone:</strong> 6307770238</p>
+      <p><strong>Phone:</strong> +91 63876 38060</p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    © 2026 Modern Children Academy. All rights reserved.
+  </footer>
 
   <script src="script.js"></script>
 </body>
